<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_homepage"
            android:title="@string/drawer_nav_homepage_title"/>
        <item android:id="@+id/nav_today"
            android:title="@string/drawer_nav_today_title"/>
        <item android:id="@+id/nav_progress_list"
            android:title="@string/drawer_nav_progress_list_title"/>
        <item android:id="@+id/nav_daily_record_list"
            android:title="@string/drawer_nav_daily_record_list_title"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_backup_data"
                android:title="@string/drawer_nav_backup_title"/>
        </menu>
    </item>

</menu>
